[gd_scene load_steps=5 format=3 uid="uid://jq6d2sf4fyc1"]

[ext_resource type="Script" path="res://Scripts/singletons/eding.gd" id="1_gy6eu"]
[ext_resource type="FontFile" uid="uid://bxywmu6nfkka0" path="res://assets/fonts/Alkhemikal.ttf" id="2_6y3qn"]

[sub_resource type="LabelSettings" id="LabelSettings_xg2l3"]
font = ExtResource("2_6y3qn")
font_size = 32

[sub_resource type="Theme" id="Theme_1l0vp"]
default_font = ExtResource("2_6y3qn")
default_font_size = 64

[node name="Transition" type="Control"]
z_index = 10
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_gy6eu")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0)

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1

[node name="Label" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -430.0
offset_top = -220.0
offset_right = 430.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2
text = "opa"
label_settings = SubResource("LabelSettings_xg2l3")
horizontal_alignment = 1
autowrap_mode = 2
clip_text = true

[node name="characterTimer" type="Timer" parent="."]
wait_time = 0.05

[node name="Button" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = 180.0
offset_right = 68.0
offset_bottom = 254.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_1l0vp")
text = "Fim"
flat = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="characterTimer" to="." method="_on_character_timer_timeout"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
